--- a/frontend/views/layout.jade
+++ b/frontend/views/layout.jade
@@ -2,20 +2,20 @@ doctype html
 html
   head
     title= title
-    link(rel="stylesheet", href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css")
+    link(rel="stylesheet", href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css")
     link(rel="stylesheet", href="/stylesheets/style.css")
         
   body(layout="row" layout-xs="column" ng-app="mainApp" ng-cloak)
     block content
     
     <!-- Angular Material requires Angular.js Libraries -->
-    script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js")
-    script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js")
-    script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js")
-    script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js")
 
     <!-- Angular Material Library -->
-    script(src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js")
 
     <!-- Your application bootstrap -->
     script(src="/javascripts/main-app.js")
