--- a/frontend/views/layout.jade
+++ b/frontend/views/layout.jade
@@ -1,21 +1,30 @@
 doctype html
-html
-  head
-    title= title
-    link(rel="stylesheet", href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css")
-    link(rel="stylesheet", href="/stylesheets/style.css")
+html(ng-app="MainApp")
+    head
+        title= title
         
-  body(layout="row" layout-xs="column" ng-app="mainApp" ng-cloak)
-    block content
+        //- CSS Styling
+        link(rel="stylesheet", href="https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.css")
+        link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css")
+        link(rel="stylesheet", href="/stylesheets/flatly-bootstrap-theme.css")
+        link(rel="stylesheet", href="/stylesheets/style.css")
+
+    body(ng-controller="MainController" class="container" ng-cloak)
+        block content
+
+    //- Bootstrap Libraries
+    script(src="https://code.jquery.com/jquery-3.1.1.slim.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js")
     
-    <!-- Angular Material requires Angular.js Libraries -->
-    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js")
-    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js")
-    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js")
-    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js")
+    //- Angular.js Libraries
+    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js")
+    
+    //- D3 Libraries
+    script(src="https://d3js.org/d3.v4.js")
+    script(src="https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.js")
+    //- script(src="https://code.highcharts.com")
 
-    <!-- Angular Material Library -->
-    script(src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js")
-
-    <!-- Your application bootstrap -->
+    //- Your application bootstrap
     script(src="/javascripts/main-app.js")
