--- a/frontend/views/layout.jade
+++ b/frontend/views/layout.jade
@@ -25,6 +25,9 @@ html(ng-app="MainApp")
     script(src="https://d3js.org/d3.v4.js")
     script(src="https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.js")
     //- script(src="https://code.highcharts.com")
+    
+    //- Moment.js
+    script(src="/javascripts/moment.min.js")
 
     //- Your application bootstrap
     script(src="/javascripts/main-app.js")
