--- a/frontend/views/plain.html
+++ b/frontend/views/plain.html
@@ -27,7 +27,7 @@
                 <th>Comment</th>
             </tr >
             <tr ng-repeat="comment in search_result | orderBy:'ui_id':true | limitTo:5 track by $index" class="text-center">
-                <td align="left">{{comment.created_utc}}</td>
+                <td align="left">{{comment.timestamp}}</td>
                 <td ng-bind-html="toTrustedHTML(comment.body)" align="left"></td>
             </tr>
         </table>
