Nodejs be able to register new percolator

--- a/frontend/views/layout.jade
+++ b/frontend/views/layout.jade
@@ -35,7 +35,7 @@ html(ng-app="MainApp")
     script.
         // This first call is for initiating connection to our DB to improve response speed in later calls
         $.ajax({
-          url: '/search/trump/unknown',
+          url: '/search/tanakrit/unknown',
         }).done(function() {
           console.log('Ready to search!');
         });
