--- a/frontend/views/plain.html
+++ b/frontend/views/plain.html
@@ -8,28 +8,43 @@
 <div layout="row">
     <div class="col">
         <div class="input-group input-group-lg">
-            <input ng-model="search_topic" ng-change="changeTopic()" ng-keyup="$event.keyCode == 13 && commitQuery()" type="text" class="form-control" placeholder="Search Topic">
+            <input ng-model="search_topic" ng-change="cancelSearch()" ng-keyup="$event.keyCode == 13 && commitQuery()" type="text" class="form-control" placeholder="Search Topic">
             <span class="input-group-btn">
-                <button ng-click="cancelSearch()" ng-hide="cancelled" class="btn btn-warning " type="button">Stop</button>
+                <button ng-click="stopSearch()" ng-hide="cancelled" class="btn btn-warning " type="button">Stop</button>
                 <button ng-click="commitQuery()" class="btn btn-primary" type="button">Go!</button>
             </span>
         </div>
     </div>
 </div>
 <br/>
-<div layout="row">
+<div layout="row" style="font-size: 17px;">
     <div class="col">
         <table ng-show="search_result.length > 0">
+            <col width="22%">
             <col width="25%">
-            <col width="75%">
+            <col width="58%">
             <tr align="left">
                 <th>Time</th>
-                <th>Comment</th>
-            </tr >
-            <tr ng-repeat="comment in search_result | orderBy:'ui_id':true | limitTo:5 track by $index" class="text-center">
-                <td align="left">{{comment.timestamp}}</td>
-                <td ng-bind-html="toTrustedHTML(comment.body)" align="left"></td>
+                <th>Link</th>
+                <th>Post</th>
+            </tr>
+            <tr ng-repeat="post in search_result | orderBy:'ui_id':true | limitTo:5 track by $index" class="text-center">
+                <td ng-hide="isEmpty(post.title)" align="left">{{post.timestamp}}</td>
+                <td ng-hide="isEmpty(post.title)" align="left">
+                    <a target="_blank" href="{{'http://reddit.com'+post.permalink}}">
+                        <div>
+                            {{ post.permalink | limitTo: 20 }}{{post.permalink.length > 20 ? '...' : ''}}
+                        </div>
+                    </a>
+                </td>
+                <td ng-bind-html="toTrustedHTML(post.title)" align="left"></td>
             </tr>
         </table>
+    </div>
+</div>
+<div layout="row">
+    <div class="col">
+        <div id="graph-container">
+        </div>
     </div>
 </div>
