--- a/frontend/public/stylesheets/flatly-bootstrap-theme.css
+++ b/frontend/public/stylesheets/flatly-bootstrap-theme.css
@@ -1606,6 +1606,11 @@ pre code {
     width: 1170px;
   }
 }
+@media (min-width: 1920px) {
+  .container {
+    width: 1885px;
+  }
+}
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
