--- a/frontend/views/layout.jade
+++ b/frontend/views/layout.jade
@@ -6,6 +6,7 @@ html(ng-app="MainApp")
         //- CSS Styling
         //- link(rel="stylesheet", href="https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.css")
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css")
+        link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
         link(rel="stylesheet", href="/stylesheets/flatly-bootstrap-theme.css")
         link(rel="stylesheet", href="/stylesheets/style.css")
 
@@ -26,7 +27,8 @@ html(ng-app="MainApp")
     script(src="https://d3js.org/d3.v4.js")
     script(src="https://cdn.plot.ly/plotly-latest.min.js")
     //- script(src="https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.js")
-    script(src="https://code.highcharts.com/highcharts.js")
+    //- script(src="https://code.highcharts.com/highcharts.js")
+    script(src="https://code.highcharts.com/stock/highstock.js")
     
     //- Moment.js
     script(src="/javascripts/moment.min.js")
@@ -35,11 +37,10 @@ html(ng-app="MainApp")
     script(src="/javascripts/graph.js")
     script(src="/javascripts/main-app.js")
     
-    
     script.
         // This first call is for initiating connection to our DB to improve response speed in later calls
         $.ajax({
-          url: '/search/tanakrit/unknown/0',
+          url: '/search/tanakrit/unknown',
         }).done(function() {
           console.log('Ready to search!');
         });
