Fixed frontend bug: graph size 100% parent

--- a/frontend/public/stylesheets/style.css
+++ b/frontend/public/stylesheets/style.css
@@ -12,6 +12,7 @@ html, body {
     height:100% !important;
 }
 
-table th {
-    /*text-align: center;*/
+.highcharts-root {
+    width:100% !important;
+    height:100% !important;
 }
