--- a/frontend/views/plain.html
+++ b/frontend/views/plain.html
@@ -56,11 +56,13 @@
     </div>
 </div>
 <br/>
-<div layout="row" ng-show="search_result.length > 0">
+<div layout="row" ng-show="graphReady">
     <div class="col-md-6 text-center">
         <div id="graph-container1" style="background-color:#fff; border-radius: 5px; padding: 10px;"></div>
+        &nbsp;
     </div>
     <div class="col-md-6 text-center">
         <div id="graph-container2" style="background-color:#fff; border-radius: 5px; padding: 10px;"></div>
+        &nbsp;
     </div>
 </div>
